banner-part-added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="header-section">
-        <h4>Follow Us on <a href="https://www.facebook.com">facebook</a></h4>
-        <h4>Contact: shuhelahmed***@gmail.com</h4>
+    <section>
+        <div class="header-section">
+            <h4>Follow Us on <a href="https://www.facebook.com" class="header-link">facebook</a></h4>
+            <h4>Contact: shuhelahmed***@gmail.com</h4>
+        </div> 
+    </section>
+    <section class="banner-section flexible-content">
+        <div class="banner-section-left">
+            <h1><span id="skip">Skip</span> the Diet, Just Eat Healthy With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a target="_blank" href="https://www.foodpanda.com">Order Food</a>
+        </div>
+        <div class="banner-section-right">
+            <img src="img/attractive-man-eating-hamburger-he-260nw-310832510-removebg-preview.png" alt="">
+        </div>
     </section>
 </body>
 </html>
