--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <section>
         <div class="header-section">
             <h4>Follow Us on <a href="https://www.facebook.com" class="header-link">facebook</a></h4>
             <h4>Contact: shuhelahmed***@gmail.com</h4>
         </div> 
     </section>
+
     <section class="banner-section flexible-content">
         <div class="banner-section-left">
             <h1><span id="skip">Skip</span> the Diet, Just Eat Healthy With Food Network</h1>
@@ -24,8 +26,20 @@
             <a target="_blank" href="https://www.foodpanda.com">Order Food</a>
         </div>
         <div class="banner-section-right">
-            <img src="img/attractive-man-eating-hamburger-he-260nw-310832510-removebg-preview.png" alt="">
+            <img src="img/attractive-man.png" alt="">
         </div>
     </section>
+
+    <section class="about-me-section flexible-content">
+        <div class="about-me-left">
+            <img src="img/young-guy.png" alt="">
+        </div>
+        <div class="about-me-right">
+            <h2>About Me</h2>
+            <p>I am a student. I have just finished my higher secondary certificate exam. Now, I am determined to be a skilled organizer at any five-star restaurant. I have also some knowledge in Computer Science, such as web developement and to brush up on that little skill, I enrolled in web developement course with Jhankar Mahbub a few days ago</p>
+            <a target="_blank" href="https://www.facebook.com">Contact Me</a>
+        </div>
+    </section>
+
 </body>
 </html>
