team and footer added

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-    <section>
+    <header>
         <div class="header-section">
             <h4>Follow Us on <a target="_blank" href="https://www.facebook.com" class="header-link">facebook</a></h4>
             <h4>Contact: shuhelahmed***@gmail.com</h4>
         </div> 
-    </section>
+    </header>
 
     <section class="banner-section flexible-content">
         <div class="banner-section-left">
@@ -43,7 +43,7 @@
 
     <section class="recipe-section">
         <div class="recipe-top">
-            <h3>My Recipies</h3>
+            <h1>My Recipies</h1>
             <p>We provide diffenrent kind of foods, and interestingly we also give door-to-door delivery service throughout the whole country. Indeed, this quality services have been provided by us for years. Although we have just started our online service, foods have been loving by local people for a long time</p>
         </div>
         <div class="recipe-bottom flexible-content">
@@ -54,16 +54,53 @@
             </div>
             <div class="same-recipe-bottom">
                 <img src="img/pexels-askar-abayev-6192005.jpg" alt="">
-                <h4>Roshmolai</h4>
-                <p>'Roshmolai' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
+                <h4>Jilapi</h4>
+                <p>'Jilapi' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
             <div class="same-recipe-bottom">
                 <img src="img/pexels-askar-abayev-6192008.jpg" alt="">
-                <h4>Roshmolai</h4>
-                <p>'Roshmolai' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
+                <h4>Nimki</h4>
+                <p>'Nimki' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
         </div>
     </section>
+
+    <section class="team-sectiion">
+        <h1 id="the-team">The team</h1>
+        <div class="team-content flexible-content">
+            <div class="same-team-content">
+                <img src="img/member1.jpg" alt="">
+                <h2>Timothy Reed</h2>
+                <h4>Founder & CEO</h4>
+                <p>Welcome to our website. we are running this business for a long time and have been appreciating by a lot of customers. We will really be pleased if we can serve you with our appetizing foods</p>
+            </div>
+            <div class="same-team-content">
+                <img src="img/member2.jpg" alt="">
+                <h2>Ruth Woods</h2>
+                <h4>Directing Manager</h4>
+                <p>Hi there! I am the directing manager of Food Network. I conduct every aspect of our customer support. You are really welcome to our restaurant</p>
+            </div>
+            <div class="same-team-content">
+                <img src="img/member3.jpg" alt="">
+                <h2>Victoria Valdez</h2>
+                <h4>The Cook</h4>
+                <p>Hello everyone! I am the cook of Food Network and have been servicing here for 20 years. Hence, I am an experienced person in this sector. Hopefully, you will not be unhapppy by checking out our foods because they are really delicious and reviewed by a lot of customers.</p>
+            </div>
+            <div class="same-team-content">
+                <img src="img/member4.jpg" alt="">
+                <h2>Beverly Little</h2>
+                <h4>Marketing Manager</h4>
+                <p>Hello guys. I am the marketing manager of Food Network. I have been working here for a long time, and when I advertise our restaurant menus, people wish me good luck since they are really pleased by our products</p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-section">
+        <div class="footer-content">
+            <h1><span id="food">Food</span> Network</h1>
+            <p>Eat healthy to live healthy. Live healthy to live happy</p>
+        </div>
+    </footer>
 
 </body>
 </html>
