--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 <body>
 
     <header>
-        <div class="header-section">
-            <h4>Follow Us on <a target="_blank" href="https://www.facebook.com" class="header-link">facebook</a></h4>
-            <h4>Contact: shuhelahmed***@gmail.com</h4>
-        </div> 
+        <div class="header-section flexible-content">
+            <div class="header-left">
+                <h4>Follow Us on <a target="_blank" href="https://www.facebook.com" class="header-link">facebook</a></h4>
+                <h4>Contact: foodnetwork***@gmail.com</h4>
+            </div>  
+            <div class="header-right">
+                <input class="header-input" type="text" placeholder="type here">
+                <button class="header-btn" value="submit">search</button>
+            </div>
+        </div>  
     </header>
 
     <section class="banner-section flexible-content">
@@ -43,22 +49,22 @@
 
     <section class="recipe-section">
         <div class="recipe-top">
-            <h1>My Recipies</h1>
+            <h1>Our Recipies</h1>
             <p>We provide diffenrent kind of foods, and interestingly we also give door-to-door delivery service throughout the whole country. Indeed, this quality services have been provided by us for years. Although we have just started our online service, foods have been loving by local people for a long time</p>
         </div>
         <div class="recipe-bottom flexible-content">
             <div class="same-recipe-bottom">
-                <img src="img/pexels-annie-untalan-4015334.jpg" alt="">
+                <img src="img/Project Cover.jpg" alt="">
                 <h4>Roshmolai</h4>
                 <p>'Roshmolai' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
             <div class="same-recipe-bottom">
-                <img src="img/pexels-askar-abayev-6192005.jpg" alt="">
+                <img src="img/Project Cover1.jpg" alt="">
                 <h4>Jilapi</h4>
                 <p>'Jilapi' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
             <div class="same-recipe-bottom">
-                <img src="img/pexels-askar-abayev-6192008.jpg" alt="">
+                <img src="img/Project Cover2.png" alt="">
                 <h4>Nimki</h4>
                 <p>'Nimki' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
