--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
                 <h4>Contact: foodnetwork***@gmail.com</h4>
             </div>  
             <div class="header-right">
-                <input class="header-input" type="text" placeholder="type here">
-                <button class="header-btn" value="submit">search</button>
+                <div class="input-section">
+                    <input class="header-input" type="text" placeholder="type here">
+                    <button class="header-btn" value="submit">search</button>
+                </div>
+                <div class="social-icon-bar">
+                    <a class="social-icon" target="_blank" href="https://www.instagram.com"><img src="img/insta.png" alt=""></a>
+                    <a class="social-icon" target="_blank" href="https://www.twitter.com"><img src="img/twitter.png" alt=""></a>
+                    <a class="social-icon" target="_blank" href="https://www.linkedin.com"><img src="img/linkedin.png" alt=""></a>
+                </div>
             </div>
         </div>  
     </header>
