--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <div class="header-section flexible-content">
             <div class="header-left">
-                <h4>Follow Us on <a target="_blank" href="https://www.facebook.com" class="header-link">facebook</a></h4>
-                <h4>Contact: foodnetwork***@gmail.com</h4>
+                <h5>Follow Us on <a target="_blank" href="https://www.facebook.com" class="header-link">facebook</a></h5>
+                <h5>Contact: foodnetwork***@gmail.com</h5>
             </div>  
             <div class="header-right">
                 <div class="input-section">
@@ -34,8 +34,8 @@
 
     <section class="banner-section flexible-content">
         <div class="banner-section-left">
-            <h1><span id="skip">Skip</span> the Diet, Just Eat Healthy With Food Network</h1>
-            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <h1><i><span id="skip">Skip</span> the Diet, Just Eat Healthy With Food Network</i></h1>
+            <p>Imagine you don't need a diet because we provide <strong>healthy and delicious</strong> food for you!</p>
             <a target="_blank" href="https://www.foodpanda.com">Order Food</a>
         </div>
         <div class="banner-section-right">
@@ -49,7 +49,7 @@
         </div>
         <div class="about-me-right">
             <h2>About Me</h2>
-            <p>I am a student. I have just finished my higher secondary certificate exam. Now, I am determined to be a skilled organizer at any five-star restaurant. I have also some knowledge in Computer Science, such as web developement and to brush up on that little skill, I enrolled in web developement course with Jhankar Mahbub a few days ago</p>
+            <p>I am a student. I have just finished my higher secondary certificate exam. Now, I am determined to be a <b>skilled organizer</b> at any five-star restaurant. I have also some knowledge in <b>Computer Science</b>, such as <b>web developement</b> and to brush up on that little skill, I enrolled in web developement course with <b>Jhankar Mahbub</b> a few days ago</p>
             <a target="_blank" href="https://www.facebook.com">Contact Me</a>
         </div>
     </section>
@@ -57,22 +57,22 @@
     <section class="recipe-section">
         <div class="recipe-top">
             <h1>Our Recipies</h1>
-            <p>We provide diffenrent kind of foods, and interestingly we also give door-to-door delivery service throughout the whole country. Indeed, this quality services have been provided by us for years. Although we have just started our online service, foods have been loving by local people for a long time</p>
+            <p>We provide different kinds of foods, and interestingly we also give <strong>door-to-door</strong> delivery service throughout the <b>whole country</b>. Indeed, this quality services have been provided by us for years. Although we have just started our online service, foods have been loving by local people for a long time</p>
         </div>
         <div class="recipe-bottom flexible-content">
             <div class="same-recipe-bottom">
                 <img src="img/Project Cover.jpg" alt="">
-                <h4>Roshmolai</h4>
+                <h3><i>Roshmolai</i></h3>
                 <p>'Roshmolai' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
             <div class="same-recipe-bottom">
                 <img src="img/Project Cover1.jpg" alt="">
-                <h4>Jilapi</h4>
+                <h3><i>Jilapi</i></h3>
                 <p>'Jilapi' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
             <div class="same-recipe-bottom">
                 <img src="img/Project Cover2.png" alt="">
-                <h4>Nimki</h4>
+                <h3><i>Nimki</i></h3>
                 <p>'Nimki' is one of the sweetest foods in Bangladesh. It is really delicious and fond of by many people</p>
             </div>
         </div>
@@ -84,26 +84,26 @@
             <div class="same-team-content">
                 <img src="img/member1.jpg" alt="">
                 <h2>Timothy Reed</h2>
-                <h4>Founder & CEO</h4>
-                <p>Welcome to our website. we are running this business for a long time and have been appreciating by a lot of customers. We will really be pleased if we can serve you with our appetizing foods</p>
+                <h3>Founder & CEO</h3>
+                <p>Welcome to our website. we are running this business for a long time and have been appreciating by a <b>lot of customers</b>. We will really be pleased if we can serve you with our appetizing foods</p>
             </div>
             <div class="same-team-content">
                 <img src="img/member2.jpg" alt="">
                 <h2>Ruth Woods</h2>
-                <h4>Directing Manager</h4>
-                <p>Hi there! I am the directing manager of Food Network. I conduct every aspect of our customer support. You are really welcome to our restaurant</p>
+                <h3>Directing Manager</h3>
+                <p>Hi there! I am the directing manager of Food Network. I conduct every aspect of our customer support. You are <b>welcome</b> to our restaurant</p>
             </div>
             <div class="same-team-content">
                 <img src="img/member3.jpg" alt="">
                 <h2>Victoria Valdez</h2>
-                <h4>The Cook</h4>
-                <p>Hello everyone! I am the cook of Food Network and have been servicing here for 20 years. Hence, I am an experienced person in this sector. Hopefully, you will not be unhapppy by checking out our foods because they are really delicious and reviewed by a lot of customers.</p>
+                <h3>The Cook</h3>
+                <p>Hello everyone! I am the cook of <b>Food Network</b> and have been servicing here for <strong>20 years</strong>. Hence, I am an experienced person in this sector. Hopefully, you will not be unhapppy by checking out our foods because they are really delicious and reviewed by a lot of customers.</p>
             </div>
             <div class="same-team-content">
                 <img src="img/member4.jpg" alt="">
                 <h2>Beverly Little</h2>
-                <h4>Marketing Manager</h4>
-                <p>Hello guys. I am the marketing manager of Food Network. I have been working here for a long time, and when I advertise our restaurant menus, people wish me good luck since they are really pleased by our products</p>
+                <h3>Marketing Manager</h3>
+                <p>Hello guys. I am the marketing manager of <b>Food Network</b>. I have been working here for a long time, and when I advertise our restaurant menus, people wish me good luck since they are really <strong>pleased</strong> by our products</p>
             </div>
         </div>
     </section>
