log in method added

--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
             </div>  
             <div class="header-right">
                 <div class="input-section">
-                    <input class="header-input" type="text" placeholder="type here">
-                    <button class="header-btn" value="submit">search</button>
-                </div>
-                <div class="social-icon-bar">
-                    <a class="social-icon" target="_blank" href="https://www.instagram.com"><img src="img/insta.png" alt=""></a>
-                    <a class="social-icon" target="_blank" href="https://www.twitter.com"><img src="img/twitter.png" alt=""></a>
-                    <a class="social-icon" target="_blank" href="https://www.linkedin.com"><img src="img/linkedin.png" alt=""></a>
+                    <input class="header-input" type="text" placeholder="username"> <br>
+                    <input class="header-input" type="password" placeholder="password">
+                    <button class="header-btn" value="submit">Log in</button>
                 </div>
             </div>
         </div>  
