header checkbox added

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
             </div>  
             <div class="header-right">
                 <div class="input-section">
-                    <input class="header-input" type="text" placeholder="username"> <br>
-                    <input class="header-input" type="password" placeholder="password">
-                    <button class="header-btn" value="submit">Log in</button>
+                    <form action="">
+                        <input class="header-input" type="text" placeholder="username"> <br>
+                        <input class="header-input" type="password" placeholder="password"> <br>
+                        <input type="checkbox">I agree with terms and conditons <br>
+                        <button class="header-btn">Log in</button>
+                    </form> 
                 </div>
             </div>
         </div>  
