more recipes half part added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,39 @@
         </div>
     </section>
 
+    <section class="more-recipes-section">
+        <h4>More Recipes</h4>
+        <div class="more-recipes-content flexible-content">
+            <div class="column-1">
+                <h6>Spicy Foods</h6>
+                <ol>
+                    <li>Chicken</li>
+                    <li>Mutton</li>
+                    <li>Beef</li>
+                    <li>Fish</li>
+                </ol>
+            </div>
+            <div class="column-2">
+                <h6>Chinese Foods</h6>
+                <ul>
+                    <li>Chicken Fry</li>
+                    <li>French Fry</li>
+                    <li>Chicken Nuggets</li>
+                    <li>Chinese Soup</li>
+                </ul>
+            </div>
+            <div class="column-3">
+                <h6>desserts</h6>
+                <ul>
+                    <li>Coke</li>
+                    <li>Ice-cream</li>
+                    <li>Faluda</li>
+                    <li>Lassi</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <section class="team-sectiion">
         <h1 id="the-team">The team</h1>
         <div class="team-content flexible-content">
