more recipes section completed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <form action="">
                         <input class="header-input" type="text" placeholder="username"> <br>
                         <input class="header-input" type="password" placeholder="password"> <br>
-                        <input type="checkbox">I agree with terms and conditons <br>
+                        <input type="checkbox"><small>I agree with terms and conditons</small><br>
                         <button class="header-btn">Log in</button>
                     </form> 
                 </div>
@@ -143,7 +143,7 @@
     <footer class="footer-section">
         <div class="footer-content">
             <h1><span id="food">Food</span> Network</h1>
-            <p>Eat healthy to live healthy. Live healthy to live happy</p>
+            <p>Eat <small>healthy</small> to live <small>healthy</small>. Live <small>healthy</small> to live happy</p>
         </div>
     </footer>
 
