the team small text added

--- a/index.html
+++ b/index.html
@@ -117,25 +117,25 @@
                 <img src="img/member1.jpg" alt="">
                 <h2>Timothy Reed</h2>
                 <h3>Founder & CEO</h3>
-                <p>Welcome to our website. we are running this business for a long time and have been appreciating by a <b>lot of customers</b>. We will really be pleased if we can serve you with our appetizing foods</p>
+                <p><small>Welcome</small> to our website. we are running this business for a long time and have been appreciating by a <b>lot of customers</b>. We will really be pleased if we can serve you with our appetizing foods</p>
             </div>
             <div class="same-team-content">
                 <img src="img/member2.jpg" alt="">
                 <h2>Ruth Woods</h2>
                 <h3>Directing Manager</h3>
-                <p>Hi there! I am the directing manager of Food Network. I conduct every aspect of our customer support. You are <b>welcome</b> to our restaurant</p>
+                <p> <small>Hi there!</small> I am the directing manager of Food Network. I conduct every aspect of our customer support. You are <b>welcome</b> to our restaurant</p>
             </div>
             <div class="same-team-content">
                 <img src="img/member3.jpg" alt="">
                 <h2>Victoria Valdez</h2>
                 <h3>The Cook</h3>
-                <p>Hello everyone! I am the cook of <b>Food Network</b> and have been servicing here for <strong>20 years</strong>. Hence, I am an experienced person in this sector. Hopefully, you will not be unhapppy by checking out our foods because they are really delicious and reviewed by a lot of customers.</p>
+                <p><small>Hello everyone!</small> I am the cook of <b>Food Network</b> and have been servicing here for <strong>20 years</strong>. Hence, I am an experienced person in this sector. Hopefully, you will not be unhapppy by checking out our foods because they are really delicious and reviewed by a lot of customers.</p>
             </div>
             <div class="same-team-content">
                 <img src="img/member4.jpg" alt="">
                 <h2>Beverly Little</h2>
                 <h3>Marketing Manager</h3>
-                <p>Hello guys. I am the marketing manager of <b>Food Network</b>. I have been working here for a long time, and when I advertise our restaurant menus, people wish me good luck since they are really <strong>pleased</strong> by our products</p>
+                <p><small>Hello guys.</small> I am the marketing manager of <b>Food Network</b>. I have been working here for a long time, and when I advertise our restaurant menus, people wish me good luck since they are really <strong>pleased</strong> by our products</p>
             </div>
         </div>
     </section>
