--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-section flexible-content">
             <div class="header-left">
                 <h5>Follow Us on <a target="_blank" href="https://www.facebook.com" class="header-link">facebook</a></h5>
-                <h5>Contact: foodnetwork***@gmail.com</h5>
+                <h5>Contact: foodnetwork123@gmail.com</h5>
             </div>  
             <div class="header-right">
                 <div class="input-section">
