--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </section>
 
-    <section class="team-sectiion">
+    <section class="team-section">
         <h1 id="the-team">The team</h1>
         <div class="team-content flexible-content">
             <div class="same-team-content">
