some small modification

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="banner-section flexible-content">
         <div class="banner-section-left">
             <h1><i><span id="skip">Skip</span> the Diet, Just Eat Healthy With Food Network</i></h1>
-            <p>Imagine you don't need a diet because we provide <strong>healthy and delicious</strong> food for you!</p>
+            <p>Imagine you don't need a diet because we provide <strong>healthy and delicious</strong> foods for you!</p>
             <a target="_blank" href="https://www.foodpanda.com">Order Food</a>
         </div>
         <div class="banner-section-right">
@@ -49,15 +49,15 @@
         </div>
         <div class="about-me-right">
             <h2>About Me</h2>
-            <p>I am a student. I have just finished my higher secondary certificate exam. Now, I am determined to be a <b>skilled organizer</b> at any five-star restaurant. I have also some knowledge in <b>Computer Science</b>, such as <b>web developement</b> and to brush up on that little skill, I enrolled in web developement course with <b>Jhankar Mahbub</b> a few days ago</p>
+            <p>I am a student. I have just finished my Higher Secondary Certificate exam. Now, I am determined to be a <b>skilled organiser</b> at any five-star restaurant. I have also some knowledge in <b>Computer Science</b>, such as <b>web developement</b> and to brush up on that little skill, I enrolled in 'Web Developement Course with <b>Jhankar Mahbub'</b> a few days ago</p>
             <a target="_blank" href="https://www.facebook.com">Contact Me</a>
         </div>
     </section>
 
     <section class="recipe-section">
         <div class="recipe-top">
-            <h1>Our Recipies</h1>
-            <p>We provide different kinds of foods, and interestingly we also give <strong>door-to-door</strong> delivery service throughout the <b>whole country</b>. Indeed, this quality services have been provided by us for years. Although we have just started our online service, foods have been loving by local people for a long time</p>
+            <h1>Our Recipes</h1>
+            <p>We provide different kinds of foods, and interestingly we also provide <strong>door-to-door</strong> delivery service throughout the <b>whole country</b>. Indeed, this quality services have been provided by us for years. Although we have just started our online service, foods have been loving by local people for a long time</p>
         </div>
         <div class="recipe-bottom flexible-content">
             <div class="same-recipe-bottom">
