fb and linkedin url changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header-section flexible-content">
             <div class="header-left">
-                <h5>Follow Us on <a target="_blank" href="https://www.facebook.com" class="header-link">facebook</a></h5>
+                <h5>Follow Us on <a target="_blank" href="https://www.facebook.com/shuhel01" class="header-link">facebook</a></h5>
                 <h5>Contact: foodnetwork123@gmail.com</h5>
             </div>  
             <div class="header-right">
@@ -25,7 +25,8 @@
                         <input class="header-input" type="text" placeholder="username"> <br>
                         <input class="header-input" type="password" placeholder="password"> <br>
                         <input type="checkbox"><small>I agree with terms and conditons</small><br>
-                        <button class="header-btn">Log in</button>
+                        <button class="header-btn">Sign in</button>
+                        <button class="header-btn">Register</button>
                     </form> 
                 </div>
             </div>
@@ -50,7 +51,7 @@
         <div class="about-me-right">
             <h2>About Me</h2>
             <p>I am a student. I have just finished my Higher Secondary Certificate exam. Now, I am determined to be a <b>skilled organiser</b> at any five-star restaurant. I have also some knowledge in <b>Computer Science</b>, such as <b>web developement</b> and to brush up on that little skill, I enrolled in 'Web Developement Course with <b>Jhankar Mahbub'</b> a few days ago</p>
-            <a target="_blank" href="https://www.facebook.com">Contact Me</a>
+            <a target="_blank" href="https://www.linkedin.com/in/shuhelahm/">Contact Me</a>
         </div>
     </section>
 
