some background img added

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <img src="img/member3.jpg" alt="">
                 <h2>Victoria Valdez</h2>
                 <h3>The Cook</h3>
-                <p><small>Hello everyone!</small> I am the cook of <b>Food Network</b> and have been servicing here for <strong>20 years</strong>. Hence, I am an experienced person in this sector. Hopefully, you will not be unhapppy by checking out our foods because they are really delicious and reviewed by a lot of customers.</p>
+                <p><small>Hello everyone!</small> I am the cook of <b>Food Network</b> and have been servicing here for <strong>20 years</strong>. Hence, I am an experienced person in this sector.</p>
             </div>
             <div class="same-team-content">
                 <img src="img/member4.jpg" alt="">
